reload full db when dropping collection - SERVER-3517